--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+# Nombre de la app
 spring.application.name=pokedex
 
-spring.datasource.url=jdbc:h2:mem:pokeapi
+# Usar base de datos persistente (NO en memoria)
+spring.datasource.url=jdbc:h2:file:./data/pokedexdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# Mostrar SQL en consola y mantener tablas al reiniciar
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# Habilitar consola H2
 spring.h2.console.enabled=true
-localhost:8080/h2-console
-spring.h2.console.path=/h2-ui
+spring.h2.console.path=/h2-console
