--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 # Nombre de la app
 spring.application.name=pokedex
 
-# Usar base de datos persistente (NO en memoria)
-spring.datasource.url=jdbc:h2:file:./data/pokedexdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Conexión a la base de datos MySQL/MariaDB
+spring.datasource.url=jdbc:mysql://topoha.duckdns.org:3399/pokeapi
+spring.datasource.username=chris
+spring.datasource.password=chris1210
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Mostrar SQL en consola y mantener tablas al reiniciar
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
-# Habilitar consola H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# (Opcional) Dialecto de Hibernate para MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Deshabilitar consola H2 (ya no aplica)
+spring.h2.console.enabled=false
