--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-application.properties
+/pokedex/src/main/resources/application.properties
 
 ### NetBeans ###
 /nbproject/private/
